--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ build-iPhoneSimulator/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.vscode/launch.json
+.vscode/settings.json
